// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ContentNav/Item/Active Active 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <li
      onClick={[Function]}
      role="menuitem"
    >
      <div
        className="active"
      >
        <div
          className="item-content"
        >
          Task Model 1
          <div
            className="chevron"
          />
        </div>
      </div>
      <ul
        className="sub-list "
      />
      <style
        jsx={true}
      >
        
        * {
          font-family: PT Sans Caption;
        }
        li {
          position: relative;
          display: flex;
          flex-direction: column;
          border-style: solid;
          border-width: 1px 0 0 0;
          font-size: 20px;
          text-indent: 0.25em;
          z-index: 0;
        }
        ul {
          list-style-type: none;
          padding-left: 0;
          border-width: 0 1px 1px 0;
          border-style: solid;
          width: auto;
        }
        .sub-list {
          border: none;
          width: 100%;
          margin: 0;
        }
        .sub-list .expanded {
          height: auto;
        }
        .sub-list :not(.expanded) {
          display: none;
          height: 0;
          overflow: hidden;
        }
        .item-content {
          display: flex;
          flex-direction: row;
          align-items: center;
          justify-content: space-between;
          margin: 0.5em 0;
        }
        .chevron {
          display: flex;
          align-items: center;
          margin: 0 5px;
          text-indent: 0;
        }
        .active :after {
          z-index: -1;
          position: absolute;
          content: '';
          height: calc(2em / 1.4142135623730951 + 5px);
          width: calc(2em / 1.4142135623730951 + 5px);
          right: calc(-1 * calc(calc(2em / 1.4142135623730951) / 2) - 3px);
          top: calc(calc(2em / 1.4142135623730951) / 2 - 8px);
          border-right: 1px solid #000000;
          border-top: 1px solid #000000;
          background-color: #ffffff;
          transform: rotate(45deg);
        }
      
      </style>
    </li>
  </div>
</div>
`;

exports[`Storyshots ContentNav/Item/Active Expandable 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <li
      onClick={[Function]}
      role="menuitem"
    >
      <div
        className="active"
      >
        <div
          className="item-content"
        >
          Test Name
          <div
            className="chevron"
          >
            <svg
              fill="none"
              height="24"
              onClick={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </div>
        </div>
      </div>
      <ul
        className="sub-list "
      >
        <li
          className=""
          onClick={[Function]}
          role="menuitem"
        >
          <p>
            Task Descriptions
          </p>
          <style
            jsx={true}
          >
            
        * {
          font-family: PT Sans Caption;
        }
        li {
          box-sizing: border-box;
          border-left: 3px solid #ffffff;
          display: flex;
          align-items: center;
          color: #006298;
          font-size: 16px;
          font-weight: normal;
          text-indent: 1em;
          height: 3em;
        }
        li :first-child {
          border-top: 1px solid #000;
        }
        p {
          margin-right: 2em;
        }
        .active {
          box-sizing: border-box;
          border-left: 3px solid #006298;
          font-weight: bold;
        }
        :not(.active) {
          background-color: #ffffff;
        }
      
          </style>
        </li>
      </ul>
      <style
        jsx={true}
      >
        
        * {
          font-family: PT Sans Caption;
        }
        li {
          position: relative;
          display: flex;
          flex-direction: column;
          border-style: solid;
          border-width: 1px 0 0 0;
          font-size: 20px;
          text-indent: 0.25em;
          z-index: 0;
        }
        ul {
          list-style-type: none;
          padding-left: 0;
          border-width: 0 1px 1px 0;
          border-style: solid;
          width: auto;
        }
        .sub-list {
          border: none;
          width: 100%;
          margin: 0;
        }
        .sub-list .expanded {
          height: auto;
        }
        .sub-list :not(.expanded) {
          display: none;
          height: 0;
          overflow: hidden;
        }
        .item-content {
          display: flex;
          flex-direction: row;
          align-items: center;
          justify-content: space-between;
          margin: 0.5em 0;
        }
        .chevron {
          display: flex;
          align-items: center;
          margin: 0 5px;
          text-indent: 0;
        }
        .active :after {
          z-index: -1;
          position: absolute;
          content: '';
          height: calc(2em / 1.4142135623730951 + 5px);
          width: calc(2em / 1.4142135623730951 + 5px);
          right: calc(-1 * calc(calc(2em / 1.4142135623730951) / 2) - 3px);
          top: calc(calc(2em / 1.4142135623730951) / 2 - 8px);
          border-right: 1px solid #000000;
          border-top: 1px solid #000000;
          background-color: #ffffff;
          transform: rotate(45deg);
        }
      
      </style>
    </li>
  </div>
</div>
`;

exports[`Storyshots ContentNav/Item/Active Expanded 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <li
      onClick={[Function]}
      role="menuitem"
    >
      <div
        className="active"
      >
        <div
          className="item-content"
        >
          Test Name
          <div
            className="chevron"
          >
            <svg
              fill="none"
              height="24"
              onClick={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="18 15 12 9 6 15"
              />
            </svg>
          </div>
        </div>
      </div>
      <ul
        className="sub-list expanded"
      >
        <li
          className=""
          onClick={[Function]}
          role="menuitem"
        >
          <p>
            Task Descriptions
          </p>
          <style
            jsx={true}
          >
            
        * {
          font-family: PT Sans Caption;
        }
        li {
          box-sizing: border-box;
          border-left: 3px solid #ffffff;
          display: flex;
          align-items: center;
          color: #006298;
          font-size: 16px;
          font-weight: normal;
          text-indent: 1em;
          height: 3em;
        }
        li :first-child {
          border-top: 1px solid #000;
        }
        p {
          margin-right: 2em;
        }
        .active {
          box-sizing: border-box;
          border-left: 3px solid #006298;
          font-weight: bold;
        }
        :not(.active) {
          background-color: #ffffff;
        }
      
          </style>
        </li>
        <li
          className=""
          onClick={[Function]}
          role="menuitem"
        >
          <p>
            Target Evidence Statement
          </p>
          <style
            jsx={true}
          >
            
        * {
          font-family: PT Sans Caption;
        }
        li {
          box-sizing: border-box;
          border-left: 3px solid #ffffff;
          display: flex;
          align-items: center;
          color: #006298;
          font-size: 16px;
          font-weight: normal;
          text-indent: 1em;
          height: 3em;
        }
        li :first-child {
          border-top: 1px solid #000;
        }
        p {
          margin-right: 2em;
        }
        .active {
          box-sizing: border-box;
          border-left: 3px solid #006298;
          font-weight: bold;
        }
        :not(.active) {
          background-color: #ffffff;
        }
      
          </style>
        </li>
      </ul>
      <style
        jsx={true}
      >
        
        * {
          font-family: PT Sans Caption;
        }
        li {
          position: relative;
          display: flex;
          flex-direction: column;
          border-style: solid;
          border-width: 1px 0 0 0;
          font-size: 20px;
          text-indent: 0.25em;
          z-index: 0;
        }
        ul {
          list-style-type: none;
          padding-left: 0;
          border-width: 0 1px 1px 0;
          border-style: solid;
          width: auto;
        }
        .sub-list {
          border: none;
          width: 100%;
          margin: 0;
        }
        .sub-list .expanded {
          height: auto;
        }
        .sub-list :not(.expanded) {
          display: none;
          height: 0;
          overflow: hidden;
        }
        .item-content {
          display: flex;
          flex-direction: row;
          align-items: center;
          justify-content: space-between;
          margin: 0.5em 0;
        }
        .chevron {
          display: flex;
          align-items: center;
          margin: 0 5px;
          text-indent: 0;
        }
        .active :after {
          z-index: -1;
          position: absolute;
          content: '';
          height: calc(2em / 1.4142135623730951 + 5px);
          width: calc(2em / 1.4142135623730951 + 5px);
          right: calc(-1 * calc(calc(2em / 1.4142135623730951) / 2) - 3px);
          top: calc(calc(2em / 1.4142135623730951) / 2 - 8px);
          border-right: 1px solid #000000;
          border-top: 1px solid #000000;
          background-color: #ffffff;
          transform: rotate(45deg);
        }
      
      </style>
    </li>
  </div>
</div>
`;

exports[`Storyshots ContentNav/Item/Active Expanded with active SubItem 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <li
      onClick={[Function]}
      role="menuitem"
    >
      <div
        className="active"
      >
        <div
          className="item-content"
        >
          Task Model 1
          <div
            className="chevron"
          >
            <svg
              fill="none"
              height="24"
              onClick={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="18 15 12 9 6 15"
              />
            </svg>
          </div>
        </div>
      </div>
      <ul
        className="sub-list expanded"
      >
        <li
          className=""
          onClick={[Function]}
          role="menuitem"
        >
          <p>
            Task Descriptions
          </p>
          <style
            jsx={true}
          >
            
        * {
          font-family: PT Sans Caption;
        }
        li {
          box-sizing: border-box;
          border-left: 3px solid #ffffff;
          display: flex;
          align-items: center;
          color: #006298;
          font-size: 16px;
          font-weight: normal;
          text-indent: 1em;
          height: 3em;
        }
        li :first-child {
          border-top: 1px solid #000;
        }
        p {
          margin-right: 2em;
        }
        .active {
          box-sizing: border-box;
          border-left: 3px solid #006298;
          font-weight: bold;
        }
        :not(.active) {
          background-color: #ffffff;
        }
      
          </style>
        </li>
        <li
          className="active"
          onClick={[Function]}
          role="menuitem"
        >
          <p>
            Target Evidence Statement
          </p>
          <style
            jsx={true}
          >
            
        * {
          font-family: PT Sans Caption;
        }
        li {
          box-sizing: border-box;
          border-left: 3px solid #ffffff;
          display: flex;
          align-items: center;
          color: #006298;
          font-size: 16px;
          font-weight: normal;
          text-indent: 1em;
          height: 3em;
        }
        li :first-child {
          border-top: 1px solid #000;
        }
        p {
          margin-right: 2em;
        }
        .active {
          box-sizing: border-box;
          border-left: 3px solid #006298;
          font-weight: bold;
        }
        :not(.active) {
          background-color: #ffffff;
        }
      
          </style>
        </li>
      </ul>
      <style
        jsx={true}
      >
        
        * {
          font-family: PT Sans Caption;
        }
        li {
          position: relative;
          display: flex;
          flex-direction: column;
          border-style: solid;
          border-width: 1px 0 0 0;
          font-size: 20px;
          text-indent: 0.25em;
          z-index: 0;
        }
        ul {
          list-style-type: none;
          padding-left: 0;
          border-width: 0 1px 1px 0;
          border-style: solid;
          width: auto;
        }
        .sub-list {
          border: none;
          width: 100%;
          margin: 0;
        }
        .sub-list .expanded {
          height: auto;
        }
        .sub-list :not(.expanded) {
          display: none;
          height: 0;
          overflow: hidden;
        }
        .item-content {
          display: flex;
          flex-direction: row;
          align-items: center;
          justify-content: space-between;
          margin: 0.5em 0;
        }
        .chevron {
          display: flex;
          align-items: center;
          margin: 0 5px;
          text-indent: 0;
        }
        .active :after {
          z-index: -1;
          position: absolute;
          content: '';
          height: calc(2em / 1.4142135623730951 + 5px);
          width: calc(2em / 1.4142135623730951 + 5px);
          right: calc(-1 * calc(calc(2em / 1.4142135623730951) / 2) - 3px);
          top: calc(calc(2em / 1.4142135623730951) / 2 - 8px);
          border-right: 1px solid #000000;
          border-top: 1px solid #000000;
          background-color: #ffffff;
          transform: rotate(45deg);
        }
      
      </style>
    </li>
  </div>
</div>
`;

exports[`Storyshots ContentNav/Item/Inactive Default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <li
      onClick={[Function]}
      role="menuitem"
    >
      <div
        className=""
      >
        <div
          className="item-content"
        >
          Task Model 1
          <div
            className="chevron"
          />
        </div>
      </div>
      <ul
        className="sub-list "
      />
      <style
        jsx={true}
      >
        
        * {
          font-family: PT Sans Caption;
        }
        li {
          position: relative;
          display: flex;
          flex-direction: column;
          border-style: solid;
          border-width: 1px 0 0 0;
          font-size: 20px;
          text-indent: 0.25em;
          z-index: 0;
        }
        ul {
          list-style-type: none;
          padding-left: 0;
          border-width: 0 1px 1px 0;
          border-style: solid;
          width: auto;
        }
        .sub-list {
          border: none;
          width: 100%;
          margin: 0;
        }
        .sub-list .expanded {
          height: auto;
        }
        .sub-list :not(.expanded) {
          display: none;
          height: 0;
          overflow: hidden;
        }
        .item-content {
          display: flex;
          flex-direction: row;
          align-items: center;
          justify-content: space-between;
          margin: 0.5em 0;
        }
        .chevron {
          display: flex;
          align-items: center;
          margin: 0 5px;
          text-indent: 0;
        }
        .active :after {
          z-index: -1;
          position: absolute;
          content: '';
          height: calc(2em / 1.4142135623730951 + 5px);
          width: calc(2em / 1.4142135623730951 + 5px);
          right: calc(-1 * calc(calc(2em / 1.4142135623730951) / 2) - 3px);
          top: calc(calc(2em / 1.4142135623730951) / 2 - 8px);
          border-right: 1px solid #000000;
          border-top: 1px solid #000000;
          background-color: #ffffff;
          transform: rotate(45deg);
        }
      
      </style>
    </li>
  </div>
</div>
`;

exports[`Storyshots ContentNav/Item/Inactive Expandable 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <li
      onClick={[Function]}
      role="menuitem"
    >
      <div
        className=""
      >
        <div
          className="item-content"
        >
          Test Name
          <div
            className="chevron"
          >
            <svg
              fill="none"
              height="24"
              onClick={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </div>
        </div>
      </div>
      <ul
        className="sub-list "
      >
        <li
          className=""
          onClick={[Function]}
          role="menuitem"
        >
          <p>
            Task Descriptions
          </p>
          <style
            jsx={true}
          >
            
        * {
          font-family: PT Sans Caption;
        }
        li {
          box-sizing: border-box;
          border-left: 3px solid #ffffff;
          display: flex;
          align-items: center;
          color: #006298;
          font-size: 16px;
          font-weight: normal;
          text-indent: 1em;
          height: 3em;
        }
        li :first-child {
          border-top: 1px solid #000;
        }
        p {
          margin-right: 2em;
        }
        .active {
          box-sizing: border-box;
          border-left: 3px solid #006298;
          font-weight: bold;
        }
        :not(.active) {
          background-color: #ffffff;
        }
      
          </style>
        </li>
      </ul>
      <style
        jsx={true}
      >
        
        * {
          font-family: PT Sans Caption;
        }
        li {
          position: relative;
          display: flex;
          flex-direction: column;
          border-style: solid;
          border-width: 1px 0 0 0;
          font-size: 20px;
          text-indent: 0.25em;
          z-index: 0;
        }
        ul {
          list-style-type: none;
          padding-left: 0;
          border-width: 0 1px 1px 0;
          border-style: solid;
          width: auto;
        }
        .sub-list {
          border: none;
          width: 100%;
          margin: 0;
        }
        .sub-list .expanded {
          height: auto;
        }
        .sub-list :not(.expanded) {
          display: none;
          height: 0;
          overflow: hidden;
        }
        .item-content {
          display: flex;
          flex-direction: row;
          align-items: center;
          justify-content: space-between;
          margin: 0.5em 0;
        }
        .chevron {
          display: flex;
          align-items: center;
          margin: 0 5px;
          text-indent: 0;
        }
        .active :after {
          z-index: -1;
          position: absolute;
          content: '';
          height: calc(2em / 1.4142135623730951 + 5px);
          width: calc(2em / 1.4142135623730951 + 5px);
          right: calc(-1 * calc(calc(2em / 1.4142135623730951) / 2) - 3px);
          top: calc(calc(2em / 1.4142135623730951) / 2 - 8px);
          border-right: 1px solid #000000;
          border-top: 1px solid #000000;
          background-color: #ffffff;
          transform: rotate(45deg);
        }
      
      </style>
    </li>
  </div>
</div>
`;

exports[`Storyshots ContentNav/Item/Inactive Expanded 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <li
      onClick={[Function]}
      role="menuitem"
    >
      <div
        className=""
      >
        <div
          className="item-content"
        >
          Test Name
          <div
            className="chevron"
          >
            <svg
              fill="none"
              height="24"
              onClick={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="18 15 12 9 6 15"
              />
            </svg>
          </div>
        </div>
      </div>
      <ul
        className="sub-list expanded"
      >
        <li
          className=""
          onClick={[Function]}
          role="menuitem"
        >
          <p>
            Task Descriptions
          </p>
          <style
            jsx={true}
          >
            
        * {
          font-family: PT Sans Caption;
        }
        li {
          box-sizing: border-box;
          border-left: 3px solid #ffffff;
          display: flex;
          align-items: center;
          color: #006298;
          font-size: 16px;
          font-weight: normal;
          text-indent: 1em;
          height: 3em;
        }
        li :first-child {
          border-top: 1px solid #000;
        }
        p {
          margin-right: 2em;
        }
        .active {
          box-sizing: border-box;
          border-left: 3px solid #006298;
          font-weight: bold;
        }
        :not(.active) {
          background-color: #ffffff;
        }
      
          </style>
        </li>
      </ul>
      <style
        jsx={true}
      >
        
        * {
          font-family: PT Sans Caption;
        }
        li {
          position: relative;
          display: flex;
          flex-direction: column;
          border-style: solid;
          border-width: 1px 0 0 0;
          font-size: 20px;
          text-indent: 0.25em;
          z-index: 0;
        }
        ul {
          list-style-type: none;
          padding-left: 0;
          border-width: 0 1px 1px 0;
          border-style: solid;
          width: auto;
        }
        .sub-list {
          border: none;
          width: 100%;
          margin: 0;
        }
        .sub-list .expanded {
          height: auto;
        }
        .sub-list :not(.expanded) {
          display: none;
          height: 0;
          overflow: hidden;
        }
        .item-content {
          display: flex;
          flex-direction: row;
          align-items: center;
          justify-content: space-between;
          margin: 0.5em 0;
        }
        .chevron {
          display: flex;
          align-items: center;
          margin: 0 5px;
          text-indent: 0;
        }
        .active :after {
          z-index: -1;
          position: absolute;
          content: '';
          height: calc(2em / 1.4142135623730951 + 5px);
          width: calc(2em / 1.4142135623730951 + 5px);
          right: calc(-1 * calc(calc(2em / 1.4142135623730951) / 2) - 3px);
          top: calc(calc(2em / 1.4142135623730951) / 2 - 8px);
          border-right: 1px solid #000000;
          border-top: 1px solid #000000;
          background-color: #ffffff;
          transform: rotate(45deg);
        }
      
      </style>
    </li>
  </div>
</div>
`;
